kubernates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  annotations:
    autoscaling.alpha.kubernetes.io/ScaleSubresource: "pods"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: laravel-container
          image: nobody9512/kub-laravel:v0.5
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.2"
            limits:
              memory: "1Gi"
              cpu: "0.5"
